# rmath

./: Cargo.toml  README.md
src/: main.rs
src/docs/: docs.rs
src/math/: math.rs
