[package]
name = "rmath-cli"
version = "0.1.0"
edition = "2021"
author = "Justin Elmore"
description = "A simple cli calculator"
license = "MIT"
repository = "https://github.com/jelmore1674/rmath"
homepage = "https://github.com/jelmore1674/rmath"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
